--- a/Ceriyo.Toolset.WPF.Tests/packages.config
+++ b/Ceriyo.Toolset.WPF.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="CompareNETObjects" version="3.05.0.0" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
+  <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
+  <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net461" />
   <package id="Moq" version="4.5.23" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
   <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
