--- a/Ceriyo.Core/Ceriyo.Core.csproj
+++ b/Ceriyo.Core/Ceriyo.Core.csproj
@@ -12,23 +12,6 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
@@ -51,6 +34,22 @@
     <Reference Include="artemis">
       <HintPath>..\Ceriyo.Content\Libraries\artemis.dll</HintPath>
     </Reference>
+    <Reference Include="EmptyKeys.UserInterface, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmptyKeysUI_MonoGame.2.6.0\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Common\AnyCPU\EmptyKeys.UserInterface.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EmptyKeys.UserInterface.Core, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmptyKeysUI_MonoGame.2.6.0\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Common\AnyCPU\EmptyKeys.UserInterface.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EmptyKeys.UserInterface.Debug, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmptyKeysUI_MonoGame.2.6.0\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\Common\AnyCPU\EmptyKeys.UserInterface.Debug.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EmptyKeys.UserInterface.MonoGame, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmptyKeysUI_MonoGame.2.6.0\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\MonoGame\AnyCPU\EmptyKeys.UserInterface.MonoGame.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
@@ -66,10 +65,6 @@
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MonoGame.Extended.0.5.149\lib\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Squid, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5ba804b1072f6e05, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Ceriyo.Content\Libraries\Squid.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -121,19 +116,16 @@
     <Compile Include="Data\TileData.cs" />
     <Compile Include="Entities\ObjectPainter.cs" />
     <Compile Include="Extensions\EventExtensions.cs" />
+    <Compile Include="GeneratedUI\MainMenu.xaml.cs" />
     <Compile Include="Observables\ObservablePair.cs" />
     <Compile Include="Data\SerializedFileData.cs" />
     <Compile Include="Data\ResourceItemData.cs" />
     <Compile Include="Data\SerializedManifestData.cs" />
-    <Compile Include="Scripting\Client\Contracts\ISceneMethods.cs" />
-    <Compile Include="Scripting\Client\SceneMethods.cs" />
     <Compile Include="Services\AppService.cs" />
     <Compile Include="Services\Contracts\IAppService.cs" />
     <Compile Include="Contracts\IComponentFactory.cs" />
     <Compile Include="Contracts\IDataService.cs" />
     <Compile Include="Contracts\IEntityFactory.cs" />
-    <Compile Include="Scripting\Client\Contracts\IControlMethods.cs" />
-    <Compile Include="Scripting\Client\Contracts\IStyleMethods.cs" />
     <Compile Include="Scripting\Common\Contracts\ILoggingMethods.cs" />
     <Compile Include="Scripting\Server\Contracts\IEntityMethods.cs" />
     <Compile Include="Entities\Contracts\IGameEntity.cs" />
@@ -153,7 +145,6 @@
     <Compile Include="Services\Contracts\IScreenService.cs" />
     <Compile Include="Scripting\Server\Contracts\IScriptingMethods.cs" />
     <Compile Include="Contracts\IScriptService.cs" />
-    <Compile Include="Services\Contracts\IUIService.cs" />
     <Compile Include="Data\AbilityData.cs" />
     <Compile Include="Data\AnimationData.cs" />
     <Compile Include="Data\ClassData.cs" />
@@ -185,15 +176,15 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\IScreen.cs" />
-    <Compile Include="Scripting\Client\ControlMethods.cs" />
-    <Compile Include="Scripting\Client\StyleMethods.cs" />
     <Compile Include="Scripting\Common\LoggingMethods.cs" />
     <Compile Include="Scripting\ScriptQueueObject.cs" />
     <Compile Include="Scripting\Server\EntityMethods.cs" />
     <Compile Include="Scripting\Server\LocalDataMethods.cs" />
     <Compile Include="Scripting\Server\ScriptingMethods.cs" />
     <Compile Include="Scripting\Server\PhysicsMethods.cs" />
+    <Compile Include="Services\Contracts\IUIService.cs" />
     <Compile Include="Services\EngineService.cs" />
+    <Compile Include="Services\Game\UIService.cs" />
     <Compile Include="Services\Module\ModuleDataService.cs" />
     <Compile Include="Services\Module\ModuleService.cs" />
     <Compile Include="Services\Module\ModuleResourceService.cs" />
@@ -207,19 +198,7 @@
     <Compile Include="Systems\Draw\RenderSystem.cs" />
     <Compile Include="Systems\Update\HeartbeatSystem.cs" />
     <Compile Include="Systems\Update\PainterSystem.cs" />
-    <Compile Include="UI\Controls\ChatBox.cs" />
-    <Compile Include="UI\Controls\FileDialog.cs" />
-    <Compile Include="UI\Controls\GridColumn.cs" />
-    <Compile Include="UI\Controls\GridView.cs" />
-    <Compile Include="UI\Controls\GridViewItem.cs" />
-    <Compile Include="UI\Controls\MessageBox.cs" />
-    <Compile Include="UI\Controls\TitledWindow.cs" />
-    <Compile Include="UI\Controls\TitleBar.cs" />
-    <Compile Include="UI\SampleDesktop.cs" />
-    <Compile Include="UI\SquidRenderer.cs" />
-    <Compile Include="Services\Game\UIService.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Content\Ceriyo.Content.csproj">
       <Project>{a59bd6d2-8e98-4a48-9528-dec1139994a1}</Project>
@@ -228,6 +207,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scripting\Client\Contracts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="BehaviorsLicense.txt" />
+    <Content Include="GeneratedUI\GeneratedUI Readme.txt" />
+    <Content Include="license.txt" />
+    <Content Include="shaders\DirectionalBlurShader.fx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
