--- a/Ceriyo.Core/packages.config
+++ b/Ceriyo.Core/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="EmptyKeysUI_MonoGame" version="2.6.0" targetFramework="net461" />
   <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
 </packages>
