--- a/Ceriyo.Game.Windows/packages.config
+++ b/Ceriyo.Game.Windows/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.4.0" targetFramework="net461" />
+  <package id="EmptyKeysUI_MonoGame" version="2.6.0" targetFramework="net461" />
   <package id="log4net" version="2.0.7" targetFramework="net461" />
   <package id="MonoGame.Extended" version="0.5.149" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
